# tg_bot_for_ag

./: .env.example  .gitignore  README.md  __main__.py  alembic.ini  bot.py  pyproject.toml  requirements.txt
FSMs/: FSMs.py
alembic/: env.py
alembic/versions/: 2024-02-15_33b0f80c15e4_init.py  2024-02-16_00e370b236b4_create_shifts_users.py  2024-02-16_04efc47a5177_create_models_users.py  2024-02-16_17434961e176_create_permisiions.py  2024-02-16_1914eaffb875_create_tgs.py  2024-02-16_4009fa4d0a73_create_unique_constraint_for_agencies.py  2024-02-16_44cd25f1d9a6_create_roles_permissions.py  2024-02-16_487b34e5e665_create_roles.py  2024-02-16_5456b4bc00ae_create_intervals.py  2024-02-16_62b415735e79_delet_column_with_date.py  2024-02-16_847112d844ef_create_pages_intervals.py  2024-02-16_991e543e53a8_create_agencies_users.py  2024-02-16_9c8334d7a0b4_create_shifts.py  2024-02-16_ad00ab25b81a_switch_data_type_to_time.py  2024-02-16_b9980c7dd8d5_create_pages.py  2024-02-16_c2015e75525b_create_models.py  (+35 more)
callback_factories/: back.py
config_data/: config.py  config_reader.py  settings.yml.example
database/: database.example.py  database.py
db/: base.py  db_helper.py  models.py  requests.py
db/models/: __init__.py  (+24 more)
filters/: filters.py
handlers/: DRY.py  in_systeam_handlers.py  main_handlers.py  other_handlers.py  user_handlers.py
keyboards/: kb.py  kb_schedule.py  kb_single_line_horizontally.py  kb_single_line_vertically.py  main_menu.py
lexicon/: lexicon_en.py  lexicon_ru.py
locales/: stub.pyi
middlewares/: __init__.py  db.py  i18n.py
utils/: graphics.py
(+41 files in other folders)
